--- a/js/package.json
+++ b/js/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "build": "tsc -p tsconfig.json"
   },
+  "files": ["dist"],
+  "publishConfig": {"access": "public"},
   "devDependencies": {
     "typescript": "5.5.4"
   }
